[package]
name = "chess_nuts_7drl_2021"
version = "0.1.0"
authors = ["vvdf <t42please@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib" }
specs = "0.16.1"
specs-derive = "0.4.1"
